reverse-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finalapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  tls:
    - hosts:
        - api.mycluster.com
      secretName: mycluster-com-tls
  rules:
    - host: api.mycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finalapi-svc
                port:
                  number: 8101
