reverse-proxy/kong-proxy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kong-proxy
  labels:
    app: kong-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-proxy
  template:
    metadata:
      labels:
        app: kong-proxy
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: kong-proxy
        image: kong:2.6.0-alpine
        volumeMounts:
          - name: kong-config
            mountPath: /usr/local/kong/declarative/kong-routes.yaml
            subPath: kong-routes.yaml
            readOnly: true
          - name: trusted-ca
            mountPath: /usr/local/share/certs/trusted.ca.pem
            subPath: trusted.ca.pem
            readOnly: true
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
        - name: trusted-ca
          configMap:
            name: internal-root-ca
---
kind: Service
apiVersion: v1
metadata:
  name: kong-proxy-svc
spec:
  selector:
    app: kong-proxy
  ports:
  - protocol: "TCP"
    port: 8100
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kong-proxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  tls:
    - hosts:
        - api.mycluster.com
      secretName: mycluster-com-tls
  rules:
    - host: api.mycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-proxy-svc
                port:
                  number: 8100
